# pws-companion-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-steam-deck.yml  deploy-browser.yml
scripts/: copy-sql-wasm.mjs
src/: App.tsx  analysis.ts  data.ts  main.tsx  services.ts  sqljs.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
