[package]
name = "pws-save-auditor"
version = "0.1.0"
description = "Steam Deck friendly save auditor for Pro Wrestling Sim"
authors = ["PWS Save Auditor"]
edition = "2021"

[lib]
name = "pws_save_auditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
walkdir = "2"
